@@ -217,5 +217,11 @@ benchmark:
 	@echo ""
 	@echo " -- Running Simple benchmark with RedisCluster lib and cluster server --"
 	python benchmarks/simple.py --port 7001 --timeit
+	@echo ""
+	@echo " -- Running Simple benchmark with pipelines & StrictRedis lib and non cluster server --"
+	python benchmarks/simple.py --port 7007 --timeit --pipeline --nocluster
+	@echo ""
+	@echo " -- Running Simple benchmark with RedisCluster lib and cluster server"
+	python benchmarks/simple.py --port 7001 --timeit --pipeline
 
 .PHONY: test
