@@ -38,7 +38,8 @@ def loop(rc, reset_last_key=None):
 
 
 def timeit(rc, itterations=50000):
-    """ Time how long it take to run a number of set/get:s
+    """
+    Time how long it take to run a number of set/get:s
     """
     t0 = time.time()
     for i in xrange(0, itterations):  # noqa
@@ -50,16 +51,34 @@ def timeit(rc, itterations=50000):
     print("{}k SET/GET operations took: {} seconds... {} operations per second".format((itterations / 1000) * 2, t1, (itterations / t1) * 2))
 
 
+def timeit_pipeline(rc, itterations=50000):
+    """
+    Time how long it takes to run a number of set/get:s inside a cluster pipeline
+    """
+    t0 = time.time()
+    for i in xrange(0, itterations):  # noqa
+        s = "foo{0}".format(i)
+
+        p = rc.pipeline()
+        p.set(s, i)
+        p.get(s)
+        p.execute()
+
+    t1 = time.time() - t0
+    print("{}k SET/GET operations inside pipelines took: {} seconds... {} operations per second".format((itterations / 1000) * 2, t1, (itterations / t1) * 2))
+
+
 if __name__ == "__main__":
     __docopt__ = """
 Usage:
-  simple [--host IP] [--port PORT] [--nocluster] [--timeit] [--resetlastkey] [-h] [--version]
+  simple [--host IP] [--port PORT] [--nocluster] [--timeit] [--pipeline] [--resetlastkey] [-h] [--version]
 
 Options:
   --nocluster        If flag is set then StrictRedis will be used instead of cluster lib
   --host IP          Redis server to test against [default: 127.0.0.1]
   --port PORT        Port on redis server [default: 7000]
   --timeit           run a mini benchmark to test performance
+  --pipeline         Only usable with --timeit flag. Runs SET/GET inside pipelines.
   --resetlastkey     reset __last__ key
   -h --help          show this help and exit
   -v --version       show version and exit
@@ -82,7 +101,12 @@ Options:
             10000,
             20000,
         ]
-        for itterations in test_itterstions:
-            timeit(rc, itterations=itterations)
+
+        if args["--pipeline"]:
+            for itterations in test_itterstions:
+                timeit_pipeline(rc, itterations=itterations)
+        else:
+            for itterations in test_itterstions:
+                timeit(rc, itterations=itterations)
     else:
         loop(rc, reset_last_key=args["--resetlastkey"])
